--- a/styles/style.css
+++ b/styles/style.css
@@ -147,6 +147,14 @@ li {
     transform: rotate(360deg);
   }
 }
+@keyframes fadeout {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .about {
   display: flex;
   max-width: 1400px;
@@ -181,11 +189,17 @@ li {
   transform: scale(1.2);
   opacity: 1;
 }
+.about-tabs__tab.active {
+  transform: scale(1.3);
+  opacity: 1;
+}
 .about-content {
   display: none;
 }
 .about-content.active {
   display: flex;
+  opacity: 0;
+  animation: fadeout 1s ease-in-out 0.1s forwards;
 }
 .about-content__about-title {
   font-family: "Oranienbaum", serif;
