--- a/styles/style.scss
+++ b/styles/style.scss
@@ -170,6 +170,14 @@ li {
     transform: rotate(360deg);
   }
 }
+@keyframes fadeout {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
 
 //ABOUT
@@ -190,6 +198,7 @@ li {
     margin-top: auto;
     margin-bottom: auto;
   }
+
   &-tabs {
     display: flex;
     align-items: center;
@@ -210,17 +219,23 @@ li {
         opacity: 1;
         //transform: translateX(10%);
       }
-      //&.active {
-      //  transform: scale(1.3);
-      //  opacity: 1;
-      //}
+
+      &.active {
+        transform: scale(1.3);
+        opacity: 1;
+      }
     }
   }
+
   &-content {
     display: none;
+
     &.active {
       display: flex;
+      opacity: 0;
+      animation: fadeout 1s ease-in-out .1s forwards;
     }
+
     &__about-title {
       font-family: 'Oranienbaum', serif;
       display: flex;
@@ -231,6 +246,7 @@ li {
       font-weight: 400;
       padding-bottom: 148px;
     }
+
     &__about-description {
       display: flex;
       flex-direction: column;
@@ -241,15 +257,18 @@ li {
       width: 455px;
       font-family: 'Inter', sans-serif;
       font-size: 16px;
+
       p {
         margin: 0;
         line-height: 114%;
       }
     }
+
     &__about-video {
-        margin-left: auto;
-        padding-bottom: 28px;
+      margin-left: auto;
+      padding-bottom: 28px;
     }
+
     &__author-description {
       display: flex;
       flex-direction: column;
@@ -258,17 +277,20 @@ li {
       width: 400px;
       padding-left: 10px;
     }
+
     &__author-title {
       font-family: 'Oranienbaum', serif;
       font-size: 56px;
       font-weight: 400;
     }
+
     &__author-photo {
       width: 290px;
       height: 380px;
       padding-top: 172px;
       padding-bottom: 247px;
     }
+
     &__why-description {
       font-family: 'Inter', sans-serif;
       display: flex;
@@ -276,6 +298,7 @@ li {
       justify-content: center;
       flex-direction: column;
       width: 650px;
+
       li {
         color: rgba(255, 255, 255, 0.8);
         list-style-type: disc;
@@ -283,6 +306,7 @@ li {
         font-weight: 300;
       }
     }
+
     &__why-photo {
       margin-right: auto;
       margin-left: 20px;
@@ -291,138 +315,6 @@ li {
 }
 
 
-//
-//.about {
-//  background: linear-gradient(0deg, #1E262F, #1E262F), #181C1D;
-//}
-//
-//.about-body {
-//  height: 800px;
-//  display: grid;
-//  grid-template-columns: 0.5fr 2fr 6fr 0.5fr;
-//  &__label {
-//    align-self: center;
-//    width: 60px;
-//    padding-top: 84px;
-//    transform: rotate(-90deg);
-//    color: rgba(255, 255, 255, 0.1);
-//    text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01),
-//    -3px 35px 21px rgba(0, 0, 0, 0.05),
-//    -1px 16px 16px rgba(0, 0, 0, 0.09),
-//    0px 4px 9px rgba(0, 0, 0, 0.1),
-//    0px 0px 0px rgba(0, 0, 0, 0.1);
-//  }
-//  &__links{
-//    margin: 0 auto;
-//    align-self: center;
-//    .link {
-//      line-height: 123%;
-//      transition: .3s;
-//      font-size: 24px;
-//      opacity: 0.25;
-//      display: block;
-//      &:hover {
-//        transform: scale(1.2);
-//        opacity: 1;
-//      }
-//      &.active {
-//        transform: scale(1.2);
-//        opacity: 1;
-//      }
-//    }
-//  }
-//}
-//.description-content__author {
-//  align-self: center;
-//  margin-right: 10px;
-//  margin-left: auto;
-//}
-//.description-title__author {
-//  align-self: center;
-//  font-size: 62px;
-//  color: white;
-//  font-weight: 700;
-//  p {
-//
-//  }
-//}
-//
-//.about-body__author {
-//  display: none;
-//  opacity: 0;
-//  animation: fadeout 3s ease-in-out .1s forwards;
-//  margin-left: 60px;
-//  grid-template-columns: 1fr 2fr;
-//  grid-template-rows: 1fr;
-//  grid-column-gap: 10px;
-//}
-//.about-body__why {
-//  display: none;
-//  opacity: 0;
-//  animation: fadeout 3s ease-in-out .1s forwards;
-//  margin-left: 60px;
-//  grid-template-columns: 1fr;
-//  grid-column-gap: 10px;
-//  .description-content__ul {
-//    li {
-//      padding-top: 6px;
-//      list-style-type: circle;
-//      color: white;
-//    }
-//  }
-//}
-//
-//.about-body__description {
-//  transition: .2s;
-//  display: grid;
-//  margin-left: 60px;
-//  grid-template-columns: 1fr 3fr;
-//  grid-column-gap: 10px;
-//  opacity: 0;
-//  animation: fadeout 3s ease-in-out .1s forwards;
-//}
-//
-//@keyframes fadeout {
-//  0% { opacity: 0; }
-//  100% { opacity: 1;}
-//}
-//
-//.description {
-//  &-title {
-//    font-size: 56px;
-//    margin-top: 231px;
-//    margin-bottom: 317px;
-//    color: white;
-//  }
-//}
-//.description-content__why{
-//  align-self: center;
-//  grid-row-gap: 10px;
-//  img {
-//    padding-left: 20px;
-//  }
-//}
-//.description-content {
-//  display: grid;
-//  grid-row-gap: 44px;
-//  &__video {
-//    align-self: end;
-//    margin-right: 10px;
-//    margin-left: auto;
-//  }
-//  &__subtitle {
-//    p {
-//      font-weight: 300;
-//      font-size: 16px;
-//      color: rgba(255, 255, 255, 0.8);
-//      text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01),
-//      -3px 35px 21px rgba(0, 0, 0, 0.05),
-//      -1px 16px 16px rgba(0, 0, 0, 0.09),
-//      0px 4px 9px rgba(0, 0, 0, 0.1),
-//      0px 0px 0px rgba(0, 0, 0, 0.1);
-//    }
-//  }
-//}
 
 
 
