--- a/styles/style.css
+++ b/styles/style.css
@@ -517,4 +517,58 @@ li {
   text-shadow: -6px 62px 25px rgba(0, 0, 0, 0.01), -3px 35px 21px rgba(0, 0, 0, 0.05), -1px 16px 16px rgba(0, 0, 0, 0.09), 0px 4px 9px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
 }
 
+.progress {
+  background: #FAFAFA;
+}
+.progress__title {
+  color: #1F252D;
+  font-size: 32px;
+  font-weight: 600;
+  text-align: center;
+  padding-top: 54px;
+  padding-bottom: 44px;
+}
+.progress-tabs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #1F252D;
+  gap: 24px;
+  padding-left: 52px;
+  padding-right: 52px;
+  padding-bottom: 24px;
+}
+.progress-tabs__tab {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  width: 240px;
+  height: 70px;
+  background: #FFFFFF;
+  border-radius: 12px;
+  transition: all 0.5s ease-in-out;
+}
+.progress-tabs__tab:hover {
+  background: #1F252D;
+  color: #FFFFFF;
+}
+.progress-tabs__tab.active {
+  background: linear-gradient(0deg, #1F252D, #1F252D), #FFFFFF;
+  color: #FFFFFF;
+}
+.progress-content {
+  display: none;
+  width: 1296px;
+  height: 559px;
+  background: #FFFFFF;
+  border-radius: 12px;
+  margin: 0 auto;
+}
+.progress-content.active {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 /*# sourceMappingURL=style.css.map */
