--- a/styles/style.scss
+++ b/styles/style.scss
@@ -588,6 +588,62 @@ li {
 
   }
 }
+//PROGRESS
 
+.progress {
+  background: #FAFAFA;
+  &__title {
+    color: #1F252D;
+    font-size: 32px;
+    font-weight: 600;
+    text-align: center;
+    padding-top: 54px;
+    padding-bottom: 44px;
+  }
+  &-tabs {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #1F252D;
+    gap: 24px;
+    padding-left: 52px;
+    padding-right: 52px;
+    padding-bottom: 24px;
+    &__tab {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      width: 240px;
+      height: 70px;
+      background: #FFFFFF;
+      border-radius: 12px;
+      transition: all .5s ease-in-out;
+      &:hover {
+        background: #1F252D;
+        color: #FFFFFF;
+      }
+      &.active {
+        background: linear-gradient(0deg, #1F252D, #1F252D),
+        #FFFFFF;
+        color: #FFFFFF;
+      }
+    }
+  }
+  &-content {
+    display: none;
+    width: 1296px;
+    height: 559px;
+    background: #FFFFFF;
+    border-radius: 12px;
+    margin: 0 auto;
+    &.active {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+    }
+  }
+}
 
 
