--- a/styles/style.scss
+++ b/styles/style.scss
@@ -671,9 +671,11 @@ li {
   }
 }
 .quiz-calculator {
-  height: 763px;
+  height: 777px;
   background-color: #1F252D;
   border-radius: 12px;
+  padding-left: 20px;
+  padding-right: 20px;
   ul {
     padding-inline-start: 0;
   }
@@ -727,6 +729,53 @@ li {
 }
 .radio:checked + .custom-radio__button::before {
   opacity: 1;
+}
+
+.quiz-calculator__next {
+  height: 88px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #FFFFFF;
+  &-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    width: 170px;
+    height: 52px;
+    border-radius: 55px;
+    border: 1px solid white;
+
+    img {
+      padding-left: 10px;
+      padding-top: 4px;
+    }
+  }
+}
+
+.quiz-calculator__progress {
+  background: rgba(255,255,255,0.1);
+  border-radius: 100px;
+  align-items: center;
+  position: relative;
+  display: flex;
+  height: 2px;
+  width: 100%;
+}
+
+.quiz-calculator__progress-value {
+  animation: load 3s normal forwards;
+  box-shadow: 0 10px 40px -10px #fff;
+  border-radius: 100px;
+  background: #fff;
+  height: 1px;
+  width: 0;
+}
+
+@keyframes load {
+  0% { width: 0; }
+  100% { width: 14%; }
 }
 
 //.quiz-questions-item__answers label {
